<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3"
	    android:gravity="center_vertical"
	    android:background="@color/draw_user_bg">
	    <ImageView 
	        android:id="@+id/head_pic"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_marginRight="4dp"
	        android:background="@drawable/ic_contact_picture"/>
	    <TextView 
	        android:id="@+id/user_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/userName"
	        android:textSize="22sp"
	        android:textColor="@color/white"
	        android:layout_toRightOf="@+id/head_pic"/>
	    <TextView 
	        android:id="@+id/user_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/userText"
	        android:textSize="20sp"
	        android:textColor="@color/darkgray"
	        android:layout_toRightOf="@+id/head_pic"
	        android:layout_alignBottom="@+id/head_pic"/>
	</RelativeLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="7"
	    android:orientation="vertical">
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:drawableBottom="@drawable/line"
            android:text="@string/draw_pesron_info"/>
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/draw_my_focus"/>
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/draw_my_collect"/>
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/draw_my_topic"/>
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/draw_product_feedback"/>
        <TextView 
            style="@style/drawlayout_item_sytle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/draw_call_service"/>
    </LinearLayout>
    
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:orientation="horizontal">
	    
	    <TextView android:id="@+id/logout"
	        android:text="【退出登录】"
	        android:layout_gravity="left"
	        android:layout_marginLeft="20dp"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_height="match_parent"/>

	    <TextView
	        android:id="@+id/setting"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:layout_marginRight="20dp"
	        android:gravity="center"
	        android:text="【设置】" />

	</LinearLayout>
</LinearLayout>
